Refactor upload file to associate file with current user